# cumetal

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  cumetal-spec-v0.1.md  spec.md
.github/workflows/: ci.yml
compiler/air_emitter/src/: emitter.cpp  main.cpp
compiler/air_validate/src/: main.cpp  validator.cpp
compiler/common/src/: metallib.cpp
compiler/cumetalc/: README.md  main.cpp
compiler/frontend/: README.md
compiler/passes/: README.md
compiler/passes/src/: addrspace.cpp  intrinsic_lower.cpp  metadata.cpp  phase1_pipeline.cpp  printf_lower.cpp
compiler/ptx/: README.md
compiler/ptx/src/: lower_to_llvm.cpp  lower_to_metal.cpp  main.cpp  parser.cpp
docs/: air-abi.md  build.md  fp64-policy.md  intrinsic-map.md  known-gaps.md  legal-notice.md  status.md  testing.md
install/: install.sh  uninstall.sh
runtime/: README.md
runtime/api/: channel_descriptor.h  cooperative_groups.h  cuComplex.h  cublas_v2.h  cuda.h  cuda_device_runtime_api.h  cuda_fp16.h  cuda_occupancy.h  cuda_pipeline.h  cuda_profiler_api.h  cuda_runtime.h  cuda_runtime_api.h  cudnn.h  cufft.h  curand.h  curand_kernel.h  cusolverDn.h  cusolverSp.h  cusolver_common.h  cusparse.h  cusparse_v2.h  device_atomic_functions.h  device_launch_parameters.h  driver_types.h  library_types.h  math_functions.h
runtime/api/cooperative_groups/: reduce.h
runtime/api/cub/: cub.h
runtime/api/cub/block/: block_exchange.h  block_reduce.h  block_scan.h
runtime/api/cub/device/: device_merge_sort.h  (+4 more)
runtime/api/thrust/: device_ptr.h  device_vector.h  execution_policy.h  functional.h  host_vector.h  pair.h  reduce.h  scan.h  sort.h  thrust.h  transform.h  unique.h
runtime/cache/: module_cache.cpp  module_cache.h
runtime/driver/: cuda_driver.cpp
runtime/error/: library_conflict.cpp  library_conflict.h
runtime/metal_backend/: metal_backend.h  metal_backend.mm
runtime/registration/: registration.cpp  registration.h  registration_stub.cpp
runtime/rt/: allocation_table.cpp  allocation_table.h  cublas.cpp  cuda_runtime.cpp  cudnn.cpp  cufft.cpp  curand.cpp  cusolver.cpp  cusparse.cpp  runtime_internal.h
samples/vectorAdd/: README.md  vectorAdd.cpp
scripts/: build_llmc_test_gpt2fp32cu.sh  generate_bench_metallib.sh  generate_reference_metallib.sh  run_bench_phase5.sh  run_llmc_test_gpt2fp32cu.sh
scripts/cuda_toolchain/: fatbinary  ptxas
tests/air_abi/: CMakeLists.txt  metallib_load_test.mm  run_cumetalc_cu_default_output_validate.sh  run_cumetalc_cu_emit_and_load_xcrun.sh  run_cumetalc_cu_experimental_validate.sh  run_cumetalc_default_output_emit_and_load.sh  run_cumetalc_matrix_ptx_experimental_validate.sh  run_cumetalc_positional_emit_and_load.sh  run_cumetalc_ptx_default_output_validate.sh  run_cumetalc_ptx_emit_and_load_xcrun.sh  run_cumetalc_ptx_experimental_validate.sh  run_experimental_validation.sh  run_matrix_ptx_to_experimental_validation.sh  run_multikernel_emit_validate_and_load.sh  run_negative_validation.sh  run_ptx2llvm_positional_default_output.sh  run_ptx_to_experimental_validation.sh  run_reference_validation.sh  run_xcode_matrix_regression.sh  run_xcrun_emit_and_load.sh  run_xcrun_emitter_validation.sh
tests/air_abi/reference/: matrix_mul.ptx  multi_kernel.metal  vector_add.cu  vector_add.metal  vector_add.ptx  vector_add_air.ll
tests/conformance/: CMakeLists.txt  run_conformance_suite.sh  run_llama_cpp_cumetal.sh  run_llmc_gpt2fp32cu.sh
tests/cuda_projects/cuda_samples_vectoradd/: build.sh
tests/cuda_projects/flash_attn/: flash_standalone.cu
tests/cuda_projects/sgemm/: sgemm_naive.cu
tests/functional/: CMakeLists.txt  blas1_stride_test.cpp  cub_api_test.cpp  cub_partition_sort_test.cpp  cublas_api_test.cpp  cucomplex_api_test.cpp  cuda_graph_api_test.cpp  cudnn_api_test.cpp  cudnn_attention_test.cpp  cufft_c2c_test.cpp  curand_kernel_test.cpp  curand_uniform_test.cpp  cusolver_api_test.cpp  cusolver_sparse_test.cpp  cusparse_api_test.cpp  cusparse_coo_test.cpp  cusparse_fp64_test.cpp  cusparse_spsv_test.cpp  driver_async_memcpy_test.cpp  driver_context_requirements_test.cpp  driver_context_switch_test.cpp  driver_device_api_test.cpp  driver_device_attribute_test.cpp  driver_device_query_test.cpp  driver_error_api_test.cpp  driver_extended_api_test.cpp  driver_host_alloc_test.cpp  driver_host_pointer_api_test.cpp  driver_launch_extra_scalar_test.cpp  driver_launch_extra_test.cpp  driver_launch_host_func_test.cpp  driver_matrix_mul_test.cpp  driver_mem_alloc_managed_test.cpp  driver_mem_get_info_test.cpp  driver_memset_test.cpp  driver_module_load_data_ptx_test.cpp  driver_module_load_data_test.cpp  driver_null_stream_sync_test.cpp  driver_profiler_api_test.cpp  driver_stream_callback_test.cpp  (+72 more)
tests/functional/reference/: atomic_inc.metal  atomic_shared.metal  axpy.metal  barrier_order.metal  cp_async_emul.metal  dynamic_shared_reduce.metal  fp16_ops.metal  fp64_mul_add.ptx  grid_2d.metal  grid_3d.metal  matrix_mul.metal  matrix_mul_scalar.metal  matrix_mul_tiled.metal  printf_kernel.metal  printf_scale.ptx  shared_reduce.metal  struct_arg.metal  warp_partial_mask.metal  warp_shuffle.metal  warp_size_lane.metal  warp_vote.metal
tests/ptx_sweep/: CMakeLists.txt  README.md  run_supported_ops.sh  run_unsupported_ops.sh
tests/unit/: CMakeLists.txt  addrspace_pass_test.cpp  allocation_table_test.cpp  cuda_fp16_host_test.cpp  cuda_vector_types_test.cpp  cusolver_link_test.sh  intrinsic_lower_test.cpp  library_conflict_test.cpp  metadata_pass_test.cpp  metallib_parser_test.cpp  module_cache_test.cpp  phase1_pipeline_test.cpp  printf_lower_test.cpp  ptx_lower_to_llvm_test.cpp  ptx_lower_to_metal_test.cpp  ptx_parser_test.cpp  run_bench_ratio_gate_test.sh  run_binary_shim_library_alias_test.sh  run_binary_shim_symbol_exports_test.sh  run_cuda_link_alias_test.sh  run_install_uninstall_test.sh  run_library_aliases_test.sh  run_library_link_aliases_test.sh
tools/air_inspect/: main.cpp
tools/cumetal_bench/: README.md  bench_kernels.metal  main.cpp
tools/metal_library_archive_bridge/: Package.resolved  Package.swift  README.md
tools/ptx_diff/: README.md  main.cpp
(+19 files in other folders)
